# dither

./: Cargo.toml  README.md
.github/workflows/: ci.yml
cga/: Cargo.toml
cga/src/: lib.rs
examples/: bmp.rs  sdl.rs  terminal.rs
src/: accumulator.rs  cga.rs  color_cube.rs  dither.rs  embedded_graphics.rs  lib.rs  terminal.rs  vector.rs  windowing_convolution.rs  wrapping_vec.rs
terminal/: Cargo.toml
terminal/src/: lib.rs
