[package]
name = "dither"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "*", default-features = false }
embedded-graphics-core = "*"
image = { version = "0.24.8", optional = true }
viuer = { version = "0.7.1", optional = true }

[dev-dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.6.0"
tinybmp = "0.5.0"

[features]
terminal = ["dep:viuer", "dep:image"]
cga = []
