[package]
name = "dither"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core = "*"
image = { version = "0.24.8", optional = true }
viuer = { version = "0.7.1", optional = true }
heapless = "*"

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"

[features]
terminal = ["dep:viuer", "dep:image"]
cga = []
color_cube = []

[[example]]
name = "terminal"
required-features = ["cga", "terminal", "color_cube"]

[[example]]
name = "sdl"
required-features = ["cga", "color_cube"]
