[workspace]
members = ["cga", "terminal"]

[package]
name = "dither"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-core = { version = "*", optional = true }
heapless = { version = "*", optional = true }
fixed = "1.24.0"

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"
embedded-graphics = "0.8.1"
tinybmp = "0.5.0"
cga = { path = "./cga" }
terminal = { path = "./terminal" }

[features]
default = ["embedded-graphics"]
color-cube = ["dep:heapless"]
embedded-graphics = ["dep:embedded-graphics-core"]

[[example]]
name = "terminal"
required-features = ["embedded-graphics"]

[[example]]
name = "sdl"
required-features = ["embedded-graphics"]
